# GAME-SDL-PUZZLE-Alizarin_Tetris

./: AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  README  README.md  aclocal.m4  ai.c  atris.c  atris.h  atris.spec  config.h  config.h.in  config.status  configure  configure.in  configure~  display.c  display.h  gamemenu.c  highscore.c  identity.c  mkinstalldirs  piece.c  sound.c
.deps/: ai.Po  atris.Po  button.Po  display.Po  event.Po  fastrand.Po  gamemenu.Po  grid.Po  highscore.Po  identity.Po  menu.Po  network.Po  piece.Po  sound.Po  xflame.Po
.protos/: menu.pro
